# Building-Production-Ready-Rust-Applications

./: README.md
chapter3/monolith_web_service/: .env  Cargo.toml  settings.toml
chapter3/monolith_web_service/migrations/2022-01-21-220321_create_orders/: down.sql  up.sql
chapter3/monolith_web_service/migrations/2022-01-24-124902_create_products/: down.sql  up.sql
chapter3/monolith_web_service/migrations/2022-01-24-124933_create_customers/: down.sql  up.sql
chapter3/monolith_web_service/migrations/2022-01-26-134635_create_stock/: down.sql  up.sql
chapter3/monolith_web_service/postgres/: docker-compose.yml
chapter3/monolith_web_service/src/: main.rs  models.rs  schema.rs
chapter3/monolith_web_service/src/api/: core_handler.rs  order_handler.rs  product_handler.rs  stock_handler.rs
chapter3/monolith_web_service/src/data/: base.rs  mod.rs  orders.rs  products.rs  stock.rs
chapter3/monolith_web_service/src/handlers/: core_handler.rs  example_handlers.rs  mod.rs  order_handler.rs  product_handler.rs  stock_handler.rs
chapter3/monolith_web_service/src/order/: mod.rs
chapter3/monolith_web_service/src/products/: mod.rs
chapter3/monolith_web_service/src/web_service/: mod.rs
