[package]
name = "rust_web_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
actix-web = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
postgres = "0.19.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
actix-rt = "2.6.0"
